Complete implementation of RandInt operation and comprehensive Sequence tests
Co-authored-by: ncg777 <15840233+ncg777@users.noreply.github.com>